# Auxiliary-ROS-Package

./: CMakeLists.txt
include/auxiliary/: OpticalFlow.hpp  auxiliary.hpp
msg/: controls.msg
src/: arm.cpp  auxiliary.cpp  datapackage.cpp  main.cpp  opticalflow.cpp  opticalflow.cpp~
